[package]
authors = ["Shannon Skipper"]
categories = ["command-line-utilities", "text-processing"]
description = "Output a tally of the number of times unique words appear in source input."
edition = "2024"
homepage = "https://github.com/havenwood/word-tally"
keywords = ["cli", "tally", "words", "count"]
license = "MIT"
name = "word-tally"
repository = "https://github.com/havenwood/word-tally"
version = "0.26.0"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.1"
hashbrown = "0.15.3"
icu_segmenter = "2.0.0"
memchr = "2.7.4"
memmap2 = "0.9.5"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.85"
simdutf8 = "0.1.5"
thiserror = "2.0.12"

[features]
default = []

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.6.0"
fake = "4.2.0"
predicates = "3.1.0"
tempfile = "3.10.1"

[[bench]]
name = "core"
harness = false

[[bench]]
name = "features"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "multi_file"
harness = false

[profile.release]
lto = true
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[lints.clippy]
# Clippy lint groups
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Clippy nursery group allows
redundant_pub_crate = "allow"

# Clippy lints
cast_lossless = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
large_enum_variant = "deny"
needless_pass_by_value = "deny"
redundant_closure_for_method_calls = "deny"

[lints.rust]
# Rust lint groups
future_incompatible = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
unused = "deny"

# Rust lints
elided_lifetimes_in_paths = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"
variant_size_differences = "deny"
