[package]
authors = ["Shannon Skipper"]
categories = ["command-line-utilities", "text-processing"]
description = "Output a tally of the number of times unique words appear in source input."
edition = "2024"
homepage = "https://github.com/havenwood/word-tally"
keywords = ["cli", "tally", "words", "count"]
license = "MIT"
name = "word-tally"
repository = "https://github.com/havenwood/word-tally"
version = "0.26.0"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.1"
hashbrown = "0.15.3"
icu_segmenter = "2.0.0"
memchr = "2.7.4"
memmap2 = "0.9.5"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.85"
simdutf8 = "0.1.5"
thiserror = "2.0.12"

[features]
default = []

[dev-dependencies]
assert_cmd = "2.0.14"
criterion = "0.6.0"
fake = "4.2.0"
predicates = "3.1.0"
tempfile = "3.10.1"

[[bench]]
name = "core"
harness = false

[[bench]]
name = "features"
harness = false

[[bench]]
name = "io"
harness = false

[[bench]]
name = "multi_file"
harness = false

[profile.release]
lto = true
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[lints.clippy]
# Clippy lint groups
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Clippy nursery group allows
redundant_pub_crate = "allow"

# Clippy pedantic group allows
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"

# Clippy restriction lints (cherry-picked)
boxed_local = "deny"
clone_on_copy = "deny"
cognitive_complexity = "deny"
unwrap_used = "deny"

[lints.rust]
# Rust lint groups
future_incompatible = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
unused = "deny"

# Rust lints
absolute_paths_not_starting_with_crate = "deny"
edition_2024_expr_fragment_specifier = "deny"
elided_lifetimes_in_paths = "deny"
impl_trait_redundant_captures = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
redundant_imports = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"
